@@ -1,4 +1,5 @@
 1.1.3:
+	- Support import of UTF8 bibtex (Bug 223763, Sergey B Kirpichev's patch)
 	- Fix detection of crossref query failure
 	- Fix crash in crossref parsing (Bug 222340)
 	- Fix crash in bibtex import (Bug 217866)
